--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.3
   google_sign_in: ^5.0.4
-  cloud_firestore: ^2.2.2
-  firebase_auth: ^1.4.1
-  flutter_bloc: ^7.0.1
   equatable: ^2.0.3
-  meta: ^1.3.0
   font_awesome_flutter: ^9.1.0
   pokemon_tcg: ^1.0.1
+  infinite_scroll_pagination: ^3.0.1+1
 
 
 dev_dependencies:
@@ -55,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-   assets:
-     - assets/config.json
+  #  assets:
+  #    - assets/config
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
